k8s/apps/automation/kagent/mcps/local/kubernetes/route.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-mcp-server
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  parentRefs:
    - kind: Gateway
      name: internal
      namespace: network
      sectionName: websecure
  hostnames:
    - kubernetes-mcp.jnobrega.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp
      backendRefs:
        - name: kubernetes-mcp-server
          port: 8080
